# python3-application

./: pyproject.toml
application/: __info__.py
debian/: control
